--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/companylogo.jpeg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/travel-insurance.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>client</title>
   </head>
